test/Fail/Issue2455.err
Issue2455.agda:45.15-19: error: [UnequalTerms]
x != y of type Unit
when checking that the expression refl has type
M.aux' e x ≡ M.aux' e y
